--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,31 @@ jobs:
           python -m pip install --upgrade pip
           pip install build
           python -m build
-      - uses: actions/upload-artifact@v3
+      - name: Upload Package zip
+        uses: actions/upload-artifact@v3
         with:
+          name: dcat-ap-de-validator.tar.gz
+          path: dist/**/*.tar.gz
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dcat-ap-de-validator-dist
           path: dist/
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: pypi
+      url: https://pypi.org/p/dcat-ap-de-validator
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+    steps:
+      - name: Download the dist folder
+        uses: actions/download-artifact@v3
+        with:
+          name: dcat-ap-de-validator-dist
+          path: dist/
+      - name: Publish distribution 📦 to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN  }}
