--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "dcap-ap-de-validator"
+name = "dcat-ap-de-validator"
 description = ''
 readme = "Readme.md"
 requires-python = ">=3.7"
